--- a/src/views/component/utilidades/navegador.ejs
+++ b/src/views/component/utilidades/navegador.ejs
@@ -20,7 +20,7 @@
           </li>
       </ul>
       <div class="d-flex justify-content-cente">
-        <%if(session.nombre != "none" && session.tipo != "none"){%>
+        <%if(typeof(session) != "undefined"){%>
         <a href="/favoritos" class="btn">
           <i class="material-icons">
             favorite
@@ -39,7 +39,11 @@
             </i>
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="btn" href="/perfil">Perfil</a>
             <a class="btn" href="/perfil/salir">Salir</a>
+            <% if(session.tipo == "admin"){ %>
+              <a class="btn" href="#">Administrar</a>
+            <% } %> 
           </div>
         </div>
         <%}else{%>
@@ -59,49 +63,11 @@
               </i>
             </span>
           </a>
-          <div class="dropdown">
-            <button class="btn badge-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="material-icons">
-                perm_identity
-              </i>
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <form action="http://localhost:3000/perfil/inicio" method="POST" class="m-1">
-                <div class="form-group">
-                  <label for="email">Usuario:</label>
-                  <input class="form-control" type="email" name="email" id="email" placeholder="example@mail.com">
-                  <label for="contrasena">Contraseña</label>
-                  <input class="form-control" type="password" name="contrasena" id="contrasena" placeholder="contraseña">
-                  <button type="submit" class="btn btn-success" onclick="enviar()">Ingresar</button>
-                </div>
-              </form>
-              <script src="/Js/jquery.md5.js"></script>
-              <script>
-                function enviar(){
-                  console.log($.md5($("#contrasena").val()));
-                  var parametros = {
-                    "email" : $("#email").val() ,
-                    "contrasena" : $.md5($("#contrasena").val()) ,
-                  };
-                  $.ajax({
-                    data:  parametros, //datos que se envian a traves de ajax
-                    url:   'http://localhost:3000/perfil/login', //archivo que recibe la peticion
-                    type:  'post', //método de envio
-                    beforeSend: function (){
-                      $("#login").append("<div class=\"spinner-border text-primary\" role=\"status\" id=\"load\"><span class=\"sr-only\">Loading...</span></div>");
-                    },
-                    success:  function (response) { //una vez que el archivo recibe el request lo procesa y lo devuelve
-                      if(response == 1){
-                        return true;
-                      }else{
-                        return false;
-                      }
-                    }
-                  });
-                };
-              </script>
-            </div>
-          </div>
+          <a class="btn badge-light" href="/perfil/login" type="button">
+            <i class="material-icons">
+              perm_identity
+            </i>
+          </a>
         <%}%>
       </div>
       <form class="form-inline my-2 my-lg-0">
