--- a/src/views/component/utilidades/navegador.ejs
+++ b/src/views/component/utilidades/navegador.ejs
@@ -42,7 +42,7 @@
             <a class="btn" href="/perfil">Perfil</a>
             <a class="btn" href="/perfil/salir">Salir</a>
             <% if(session.tipo == "admin"){ %>
-              <a class="btn" href="#">Administrar</a>
+              <a class="btn" href="/administrar">Administrar</a>
             <% } %> 
           </div>
         </div>
