--- a/src/views/component/utilidades/header.ejs
+++ b/src/views/component/utilidades/header.ejs
@@ -20,4 +20,9 @@
     <script src="/Js/main.js"></script>
     <script src="/Js/bootstrap-input-spinner.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css">
+    <link rel="stylesheet" href="/css/slik.css">
+
 </head>
