--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('component/utilidades/header');%>
-    <%- include('component/utilidades/navegador');%>
-
+<%- include('component/utilidades/navegador');%>
+<script src="/Js/carrito.js"></script>
         <body>
             <div class="container justify-content-end">
                 <% 
