--- a/src/views/component/administrar/edit.ejs
+++ b/src/views/component/administrar/edit.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <%- include('../utilidades/header');%>
 <%- include('../utilidades/navegador', {session:session});%>
+<script src="/Js/administracion.js"></script>
 <body>
     <div class="container-fluid" style="justify-content: center;">
         <h3>Cargar Producto</h3>
