--- a/src/views/component/administrar/card.ejs
+++ b/src/views/component/administrar/card.ejs
@@ -1,38 +1,61 @@
-<div class="card mb-3" style="max-width: 740px;">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <% if( producto.media != "" ){ %>
-            <img src="<%- producto.media %>" class="card-img" alt="...">
-        <% } else { %>
-            <img src="/Media/ing.webp" class="card-img" alt="...">
-        <% } %>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title"><%= producto.nombre %></h5>
-          <p class="card-text"><%= producto.descripcion %></p>
-          <p class="card-text">
-            <div class="dropdown">
-                <button class="btn btn-ligth dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="material-icons">
-                        settings
-                    </span>
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="btn dropdown-item" href="/administrar/edit/<%- producto.idProducto %>">
-                    <span class="material-icons">
-                        edit
-                    </span>
-                  </a>
-                  <a class="btn dropdown-item" href="#">
-                    <span class="material-icons">
-                        close
-                    </span>
-                  </a>
-                </div>
+<tr id="producto-<%- producto.idProducto %>">
+  <td scope="row"><%= producto.idProducto %></td>
+  <td><%= producto.nombre %></td>
+  <td>$<%= producto.precio %></td>
+  <td><%= producto.stock %></td>
+  <td><%= producto.descripcion %></td>
+  <td><%= producto.tipo %></td>
+  <td>
+    <img src="<%- producto.media %>" alt="" class="img-thumbnail">
+  </td>
+  <td>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#media<%= producto.idProducto %>">
+      <span class="material-icons">
+        collections
+        </span>
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="media<%= producto.idProducto %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <% if(producto.imagenes.length > 0){ %>
+              <section class="variable slider w-75">
+              <%for (let i = 0; i < producto.imagenes.length; i++) {
+                const element = producto.imagenes[i];
+                %>
+                  <div>
+                    <img style="max-width: 300px;" src="<%= element.url %>">
+                  </div>
+                <%
+              } %>
+            <% } else {%>
+              <div class="alert alert-info" role="alert">
+                No hay imagenes adicionales!!
               </div>
-          </p>
+            <%}%> 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </td>
+  <td>
+    <a class="btn dropdown-item" href="/administrar/edit/<%- producto.idProducto %>">
+      <span class="material-icons">
+          edit
+      </span>
+    </a>
+  </td>
+  <td>
+    <a class="btn dropdown-item" href="#" onclick="eliminarProducto(<%- producto.idProducto %>)">
+      <span class="material-icons">
+          close
+      </span>
+    </a>
+  </td>
+</tr>
