--- a/src/views/component/carrito/item.ejs
+++ b/src/views/component/carrito/item.ejs
@@ -1,4 +1,4 @@
-<div class="card mb-3">
+<div class="card mb-3" id="carrito-<%- data.idProducto %> ">
     <div class="row no-gutters">
         <div class="col-md-2">
             <% if( data.media != "" ){ %>
