--- a/src/views/component/utilidades/header.ejs
+++ b/src/views/component/utilidades/header.ejs
@@ -25,4 +25,5 @@
     <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css">
     <link rel="stylesheet" href="/css/slik.css">
 
+    <script src="/Js/ajax.js"></script>
 </head>
