--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -3,7 +3,7 @@
 <%- include('component/utilidades/header');%>
     <link rel="stylesheet" href="/css/productos.css">
     <%- include('component/utilidades/navegador',{session:session});%>
-
+    <script src="/Js/carrito.js"></script>
         <body onload="cargarPagina(1)">
 
             <div class="container contenido" id="productos">
