--- a/src/views/component/administrar/edit.ejs
+++ b/src/views/component/administrar/edit.ejs
@@ -59,6 +59,7 @@
                             <div class="modal-body">
                                 <div class="form-group">
                                     <label for="file">Media</label><br>
+                                    <input type="hidden" name="idproducto" value="<%= producto[0].idProducto %>">
                                     <input type="file" name="fileMedia" class="form-control-file" id="file">
                                 </div>
                             </div>
