--- a/src/views/pago.ejs
+++ b/src/views/pago.ejs
@@ -9,7 +9,7 @@
 <body>
     <form action="/procesar-pago" method="POST">
       <script
-       src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"
+       src="https://www.mercadoPago.com.ar/integrations/v1/web-payment-checkout.js"
        data-preference-id="$$id$$">
       </script>
     </form>
