--- a/src/views/pefil.ejs
+++ b/src/views/pefil.ejs
@@ -5,10 +5,10 @@
 
         <body>
             <div style="min-height: 500px;" class="container justify-content-end">
-                <p>Para poder ver sus compras y el estado de las mismas devera dirijirse al su E-mail (el que uso en la compra) o su usuario de mercadopago.</p>
+                <p>Para poder ver sus compras y el estado de las mismas devera dirijirse al su E-mail (el que uso en la compra) o su usuario de mercadoPago.</p>
                 <div class="row">
                     <div class="col-sm">
-                        <a href="https://www.mercadopago.com.ar/" class="btn btn-info" target="_blanck">Mercado Pago</a>
+                        <a href="https://www.mercadoPago.com.ar/" class="btn btn-info" target="_blanck">Mercado Pago</a>
                     </div>
                     <div class="col-sm">
                         <div class="dropdown">
