--- a/src/public/slick/slick-theme.less
+++ b/src/public/slick/slick-theme.less
@@ -2,9 +2,9 @@
 
 // Default Variables
 
-@slick-font-path: "./fonts/";
+@slick-font-PATH: "./fonts/";
 @slick-font-family: "slick";
-@slick-loader-path: "./";
+@slick-loader-PATH: "./";
 @slick-arrow-color: white;
 @slick-dot-color: black;
 @slick-dot-color-active: @slick-dot-color;
@@ -18,7 +18,7 @@
 
 /* Slider */
 .slick-loading .slick-list{
-    background: #fff url('@{slick-loader-path}ajax-loader.gif') center center no-repeat;
+    background: #fff url('@{slick-loader-PATH}ajax-loader.gif') center center no-repeat;
 }
 
 /* Arrows */
@@ -68,8 +68,8 @@
             font-family: 'slick';
             font-weight: normal;
             font-style: normal;
-            src: url('@{slick-font-path}slick.eot');
-            src: url('@{slick-font-path}slick.eot?#iefix') format('embedded-opentype'), url('@{slick-font-path}slick.woff') format('woff'), url('@{slick-font-path}slick.ttf') format('truetype'), url('@{slick-font-path}slick.svg#slick') format('svg');
+            src: url('@{slick-font-PATH}slick.eot');
+            src: url('@{slick-font-PATH}slick.eot?#iefix') format('embedded-opentype'), url('@{slick-font-PATH}slick.woff') format('woff'), url('@{slick-font-PATH}slick.ttf') format('truetype'), url('@{slick-font-PATH}slick.svg#slick') format('svg');
         }
     }
 }
