--- a/src/views/administrar.ejs
+++ b/src/views/administrar.ejs
@@ -3,31 +3,60 @@
 <%- include('component/utilidades/header');%>
 <%- include('component/utilidades/navegador', {session:session});%>
 <script src="/Js/administracion.js"></script>
+<script src="/Js/validarfomulario.js"></script>
 <body>
     <div class="container-fluid" style="justify-content: center;">
-        <table class="table">
-            <thead class="w-100">
-              <tr>
-                <th scope="col">#ID</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Precio</th>
-                <th scope="col">Stock</th>
-                <th class="col">Descripcion</th>
-                <th class="col">tipo</th>
-                <th class="col">Media</th>
-                <th class="col">Imagenes</th>
-                <th class="col">Editar</th>
-                <th class="col">Eliminar</th>
-              </tr>
-            </thead>
-            <tbody>
-                <% if(productos){ 
-                    productos.forEach(producto => { %>
-                        <%- include('component/administrar/card', {producto: producto}) %>   
-                    <% });%>
-                <% } %> 
-            </tbody>
-        </table>
+        <p>
+            <buttom class="btn btn-primary rounded" data-toggle="collapse" href="#agregarProducto" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <span class="material-icons">
+                    add
+                </span>
+            </buttom>
+          </p>
+          <div class="collapse" id="agregarProducto">
+            <div class="card card-body">
+              <form action="/administrar/agregar" enctype="multipart/form-data" onsubmit="return validarEditarProducto()" id="agregarProductoForm" method="POST">
+                  <div class="row">
+                      <div class="col-sm">
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control" name="nombre" id="nombre" value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="precio">Precio</label>
+                            <input type="text" class="form-control" name="precio" id="precio" value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="stock">Stock</label>
+                            <input type="number" min="1" class="form-control" name="stock" id="stock" value="">
+                        </div>
+                      </div>
+                      <div class="col-sm">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <label for="descripcion">Descripcion</label>
+                                <textarea class="form-control" name="descripcion" id="descripcion" rows="4"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="tipo">Tipo</label>
+                                <input type="text" class="form-control" name="tipo" id="tipo" value="">
+                            </div>
+                            <div class="form-group">
+                                <label for="file">Media</label><br>
+                                <input type="file" name="file" class="form-control-file" id="file">
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-sm">
+                        <button class="btn btn-primary rounded" type="submit">Aladir</button>
+                      </div>
+                  </div>
+              </form>
+            </div>
+          </div>
+        <%- include('component/administrar/tabla', {productos: productos}); %> 
     </div>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/slick/slick.js" type="text/javascript" charset="utf-8"></script>
