--- a/src/views/component/carrito/item.ejs
+++ b/src/views/component/carrito/item.ejs
@@ -1,4 +1,4 @@
-<div class="card mb-3" id="carrito-<%- data.idProducto %> ">
+<div class="card mb-3" id="item-<%- indice %>">
     <div class="row no-gutters">
         <div class="col-md-2">
             <% if( data.media != "" ){ %>
@@ -7,7 +7,7 @@
                 <img src="/Media/ing.webp" class="card-img" alt="...">
             <% } %>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10 cuerpo">
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-8">
@@ -20,13 +20,15 @@
                     </div>
                     <div class="col-md-2">
                         <p class="card-text">
-                            <input type="number" value="<%- data.cantidad %>" min="1" max="<%- data.stock %>" step="1" />
+                            <input type="hidden" name="" id="item-precio-<%= indice %>" value="<%= data.precio %>">
+                            <input type="number" id="item-cantidad-<%= indice %>" value="<%- data.cantidad %>" min="1" max="<%- data.stock %>" step="1" onchange="incrementarCantidad(<%= indice %>, <%= data.idProducto %>, <%= longitud %>);"/>
                         </p>
                     </div>
                     <div class="col-md-2">
                         <p class="card-text">
-                            <h4>
-                                <%- data.precio %>
+                            <hr>
+                            <h4 id="item-total-<%= indice %>">
+                                <%- data.total %>
                             </h4>
                         </p>
                     </div>
