--- a/src/views/component/productos/productos.ejs
+++ b/src/views/component/productos/productos.ejs
@@ -1,3 +1,5 @@
+<script src="/Js/favoritos.js"></script>
+<script src="/Js/carrito.js"></script>
 <div class="container-fluid contenedor-productos">
     <div class="row row-cols-1 row-cols-md-4">
         <% if (data) { %>
