--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -14,7 +14,7 @@
                                         <% 
                         if( data[0].media != ""){ %>
                                             <div class="carousel-item active">
-                                                <img src="/<%= data[0].media %>" class="d-block card-img" alt="...">
+                                                <img src="<%= data[0].media %>" class="d-block card-img" alt="...">
                                             </div>
                                             <% } else{ %>
                                                 <div class="carousel-item active">
