--- a/src/views/component/carrito/sumario.ejs
+++ b/src/views/component/carrito/sumario.ejs
@@ -7,9 +7,11 @@ data.forEach(element => {
 %> 
 <div class="d-flex flex-row-reverse">
     <div class="card col-md-4">
-        <div class="card-body">
-          <hr>
-          <p class="card-text"><h4 id="sumario-total"></h4></p>
-        </div>
+      <div class="card-body">
+        <p class="card-text"><h4 id="sumario-total"></h4></p>
       </div>
+      <div class="card-footer">
+        <a href="/carrito/comprar" class="btn btn-success" rel="noopener noreferrer">Comprar Carrito</a>
+      </div>
+    </div>
 </div>
