--- a/src/views/component/utilidades/navegador.ejs
+++ b/src/views/component/utilidades/navegador.ejs
@@ -70,9 +70,13 @@
           </a>
         <%}%>
       </div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <form action="/productos/buscar" method="POST" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" name="busqueda" placeholder="Buscar Producto" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">
+          <span class="material-icons">
+            search
+          </span>
+        </button>
       </form>
   </div>
 </nav>
