--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/productos.css">
     <%- include('component/utilidades/navegador',{session:session});%>
     <script src="/Js/carrito.js"></script>
-        <body onload="cargarPagina(1, '/productos/pagina/')">
+        <body onload="cargarPagina('/productos/pagina/1')">
 
             <div class="container contenido" id="productos">
 
