--- a/src/views/component/paginador/atras.ejs
+++ b/src/views/component/paginador/atras.ejs
@@ -2,7 +2,7 @@
     <% if(paginacion.paginaActual > 1){ %>
         <!-- prev-->
         <li class="page-item">
-            <a class="page-link" onclick="cargarPagina(<%- parseInt(paginacion.paginaActual) - 1 %>, '<%- paginacion.src %>')" aria-label="Previous">
+            <a class="page-link" onclick="cargarPagina('<%- paginacion.src %><%- parseInt(paginacion.paginaActual) - 1 %>')" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
@@ -16,16 +16,16 @@
 
     for(var i = 1 ; i <= limitefor; i++){
         if(i == paginacion.paginaActual){%>
-            <li class="page-item active"><a class="page-link" onclick="cargarPagina(<%- i %>,'<%- paginacion.src %>')"><%= i %></a></li>
+            <li class="page-item active"><a class="page-link" onclick="cargarPagina('<%- paginacion.src %><%- i %>')"><%= i %></a></li>
         <%}else{%>
-            <li class="page-item"><a class="page-link" onclick="cargarPagina(<%- i %>, '<%- paginacion.src %>')"><%= i %></a></li>
+            <li class="page-item"><a class="page-link" onclick="cargarPagina('<%- paginacion.src %><%- i %>')"><%= i %></a></li>
         <%}%>
     <%}%>
 
     <% if(paginacion.paginaActual < paginacion.total){ %>
         <!-- prev-->
         <li class="page-item">
-            <a class="page-link" onclick="cargarPagina(<%- parseInt(paginacion.paginaActual) + 1 %>, '<%- paginacion.src %>' )" aria-label="Next">
+            <a class="page-link" onclick="cargarPagina('<%- paginacion.src %><%- parseInt(paginacion.paginaActual) + 1 %>')" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
