--- a/src/views/component/productos/card.ejs
+++ b/src/views/component/productos/card.ejs
@@ -1,6 +1,6 @@
 <div class="col">
   <div class="card">
-    <div onclick="abrir(<%- indice+1 %>);">
+    <div onclick="abrir('/producto/<%- data.idProducto %>', '_self');">
       <% if(media){ %>
         <img src="<%- media %>" class="card-img-top" alt="...">
       <% } else{ %>
