--- a/src/views/component/utilidades/navegador.ejs
+++ b/src/views/component/utilidades/navegador.ejs
@@ -19,7 +19,7 @@
               <a class="nav-link text-center" href="">Contacto</a>
           </li>
       </ul>
-      <div class="d-flex justify-content-cente">
+      <div class="d-flex justify-content-center">
         <%if(typeof(session) != "undefined"){%>
         <a href="/favoritos" class="btn">
           <i class="material-icons">
@@ -70,10 +70,12 @@
           </a>
         <%}%>
       </div>
-      <form action="/productos/buscar" method="POST" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" name="busqueda" placeholder="Buscar Producto" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">
-          <span class="material-icons">
+      <form action="/productos/buscar" method="GET" class="form-inline my-2 my-lg-0 d-flex justify-content-center">
+        <div class="form-group mb-2">
+          <input class="form-control" type="search" name="busqueda" placeholder="Buscar Producto" aria-label="Search">
+        </div>
+        <button class="btn btn-outline-success mb-2" type="submit">
+          <span class="material-icons" style="font-size: 18px;">
             search
           </span>
         </button>
