--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,31 +2,31 @@
 <html lang="en">
 <%- include('component/utilidades/header');%>
     <%- include('component/utilidades/navegador', {session:session});%>
-
         <body>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner ">
-                    <div class="carousel-item active">
-                        <img src="/Media/ing.webp" class="d-block h-50" alt="...">
+            <div class="container-fluid contenido">
+                <div class="row">
+                    <div class="col-sm">
+                        <img src="" alt="">
                     </div>
-                    <div class="carousel-item">
-                        <img src="/Media/ing.webp" class="d-block h-50" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="/Media/ing.webp" class="d-block h-50" alt="...">
+                    <div class="col-sm">
+                        <h2>¿Por que un Template de un E-Comerce?</h2>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos cupiditate voluptatibus officia tempora sit pariatur aliquid, laboriosam odio neque facilis veritatis, ex magni id totam adipisci ad magnam in provident?
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-            <div class="container-fluid contenido">
-                <h1>Ecomerce plantilla de Express</h1>
+                <div class="row">
+                    <div class="col-sm">
+                        <h2>¿Como puedo usar este template?</h2>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, veritatis amet aspernatur illum ex repellendus cumque molestiae libero voluptas et similique facere tempore maiores vel impedit consequatur sint. Nostrum, voluptatum.
+                    </div>
+                    <div class="col-sm">img</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">img</div>
+                    <div class="col-sm">
+                        <h2>¿Como pueden ayudarme a Mantener este Template?</h2>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti quaerat quod consequatur laudantium voluptatem culpa harum. Officia, quos hic sapiente nam nobis quae, modi dignissimos veritatis accusantium tempore, nihil sequi?
+                    </div>
+                </div>
             </div>
         </body>
         <%- include('component/utilidades/footer');%>
